--- a/django/otto/static/css/variables.css
+++ b/django/otto/static/css/variables.css
@@ -2,7 +2,7 @@
   --bg-light-gray: #f1f1f1;
   --otto-primary-text-color: var(--bs-body-color);
   --otto-tab-body-bg-color: white;
-  --app-primary-bg: #f1f1f1;
+  --app-primary-bg: #f8f9fa;
   --app-color-purple-1: #6c23e0;
   --app-color-purple-1-hover: #6c23e030;
   --app-color-purple-2: #c536f0;
